modules/iptables/files/default_firewall
# This configuration is managed by puppet
# Firewall configuration written by system-config-securitylevel
# Manual customization of this file is not recommended.
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:Firewall-INPUT - [0:0]
-A INPUT -j Firewall-INPUT
-A FORWARD -j Firewall-INPUT
-A Firewall-INPUT -i lo -j ACCEPT
-A Firewall-INPUT -p icmp --icmp-type any -j ACCEPT
-A Firewall-INPUT -p 50 -j ACCEPT
-A Firewall-INPUT -p 51 -j ACCEPT
-A Firewall-INPUT -p udp --dport 5353 -d 224.0.0.251 -j ACCEPT
-A Firewall-INPUT -p udp -m udp --dport 631 -j ACCEPT
-A Firewall-INPUT -p tcp -m tcp --dport 631 -j ACCEPT
-A Firewall-INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A Firewall-INPUT -m state --state NEW -m tcp -p tcp --dport 9418 -j ACCEPT
-A Firewall-INPUT -m state --state NEW -m tcp -p tcp --dport 4949 -j ACCEPT
-A Firewall-INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A Firewall-INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT
-A Firewall-INPUT -m state --state NEW -m tcp -p tcp --dport 443 -j ACCEPT
-A Firewall-INPUT -j REJECT --reject-with icmp-host-prohibited
COMMIT
